--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.8.2",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-calendars": "^1.1303.0",
+    "react-native-mmkv": "^2.11.0",
+    "react-native-signature-capture": "^0.4.12",
+    "react-native-svg": "^15.1.0",
+    "react-native-xml2js": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
